--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node -r dotenv/config index.js",
     "lint": "eslint",
     "pretest": "date -Iseconds",
     "posttest": "npm run lint",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --runInBand --coverage --collectCoverage --verbose"
   },
-  "pre-commit": "test",
+  "pre-commit": [
+    "test"
+  ],
   "dependencies": {
-    "dns-packet": "^5.6.1"
+    "dns-packet": "^5.6.1",
+    "dotenv": "^17.3.1"
   },
   "devDependencies": {
     "@jobscale/eslint-plugin-standard": "^0.0.12",
